depends_compile_tests/tests/fail/derive/value/duplicate_hash.stderr
error: Attribute specified more than once
 --> tests/fail/derive/value/duplicate_hash.rs:8:15
  |
8 |     #[depends(hash)]
  |               ^^^^
